# tinychat

./: .gitignore  Dockerfile  README.md  app.py  conftest.py  editor.js  icons.py  locustfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
config/: docker-compose.yml
config/nginx/site-confs/: default.conf
test-data/: messages.txt  users.txt
