[tool.poetry]
name = "tinychat"
version = "0.1.0"
description = "Tiny chat"
authors = ["Philip Nuzhnyi <philip.nuzhnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shad4fast = "^1.2.9"
python-fasthtml = "^0.8.0"
fasthtml-tractor = {git = "https://github.com/callmephilip/fasthtml-tractor.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-playwright = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
