[tool.poetry]
name = "tinychat"
version = "0.1.0"
description = "Tiny chat"
authors = ["Philip Nuzhnyi <philip.nuzhnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shad4fast = "^1.3.1"
python-fasthtml = "^0.10.0"
lorem-text = "^2.1"
pyyaml = "^6.0.2"
ua-parser = "^0.18.0"
user-agents = "^2.2.0"
markdown = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-playwright = "^0.5.2"
flaky = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
